modified navbar and started test parsing

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
-<nav>
+<nav class="light blue">
     <div class="container nav-wrapper">
         <a href="{% url 'my_app:home_page' %}" class="brand-logo">Craigs List Clone</a>
         <ul id="nav-mobile" class="right">
-            <li><a href="{% url 'my_app:home_page' %}">Home</a></li>
+            <li><a href="{% url 'my_app:home_page' %}"><strong>Home</strong></a></li>
         </ul>
     </div>
 </nav>
