--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
             <!-- Promo Content 3 goes here -->
             <div class="center">
                 <i class="large material-icons" style="color: blue">chrome_reader_mode</i>
-                <p>A much sexier front-end to Craigslist</p>
+                <p>A much better front-end to Craigslist</p>
                 <p class="light center">We built this with ❤️</p>
             </div>
         </div>
