--- a/templates/my_app/new_search.html
+++ b/templates/my_app/new_search.html
@@ -1,13 +1,21 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block body %}
      <h2 style="text-align: center">{{ search | title }}</h2>
      <div class="row">
         {% for post in final_postings %}
             <div class="col s4">
                 <div class="card">
+                    {% if post.3 == 'none' %}
                     <div class="card-image">
-                        <a href="{{ post.1 }}"><img src="{{ post.3 }}" alt=""></a>
+                        <a href="{{ post.1 }}"><img src="{% static 'img/no-image.jpg' %}" alt="" width="300" height="300"></a>
                     </div>
+                    {% else %}
+                        <div class="card-image">
+                            <a href="{{ post.1 }}"><img src="{{ post.3 }}" alt=""></a>
+                        </div>
+                    {% endif %}
                     <div class="card-content">
                         <p>{{ post.0 }}</p>
                     </div>
